--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -1,7 +1,7 @@
 <form *ngIf="entity" #productInputForm="ngForm" class="flex-custom">
   <div style="margin-bottom: 120px;" class="entity-view__card" [class.flex-align--center]="mode === add">
     <div class="entity-view__card__header">
-      <div class="entity-view__card__header__title">{{mode === add ? 'Create new product' : 'Product general details'}}</div>
+      <div class="entity-view__card__header__title">{{mode === add ? 'Create new Product' : 'Product general details'}}</div>
       <ng-container *ngIf="mode === view">
         <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
         <md-menu #editOptions="mdMenu" x-position="before">
