--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -47,7 +47,6 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Settings</div>
-              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -76,7 +75,6 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Processing</div>
-              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -105,7 +103,6 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Gateway information</div>
-              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -120,6 +117,10 @@
               </dropdown-component>
 
               <ng-container *ngIf="entity.gateway.name === 'NMI'">
+                <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.processorId">
+                  <input required [disabled]="viewMode" md-input placeholder="Processor ID" name="processorId" [(ngModel)]="entity.gateway.processorId" type="text">
+                </md-input-container>
+
                 <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.username">
                   <input required [disabled]="viewMode" md-input placeholder="Username" name="username" [(ngModel)]="entity.gateway.username" type="text">
                 </md-input-container>
@@ -138,7 +139,6 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Customer Service</div>
-              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details merchant-provider-view__details--align">
