--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -35,10 +35,12 @@
               <div class="entity-view__card__header__title">Email Template Details</div>
               <div class="entity-view__card__header__subtitle">Edit HTML templates below or load defaults from right menu</div>
             </div>
-            <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
-            <md-menu #editOptions="mdMenu" x-position="before">
-              <button *ngIf="!addMode" md-menu-item (click)="enableEditMode()"> Edit Email Template Details</button>
-            </md-menu>
+            <ng-container *ngIf="!addMode">
+              <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
+              <md-menu #editOptions="mdMenu" x-position="before">
+                <button md-menu-item (click)="enableEditMode()"> Edit Email Template Details</button>
+              </md-menu>
+            </ng-container>
           </div>
 
           <div class="entity-view__card__content">
