--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -49,8 +49,8 @@
     </div>
 
     <div *ngIf="mode !== view" class="entity-view__card__actions">
-      <div *ngIf="mode === update" (click)="cancelUpdate.emit(true)">CANCEL</div>
-      <div (click)="save(productInputForm.form.valid)">SAVE PRODUCT</div>
+      <div (click)="cancelUpdate.emit(true)">CANCEL</div>
+      <div (click)="save(productInputForm.form.valid)">{{mode === update ? 'UPDATE PRODUCT' : 'CREATE'}}</div>
     </div>
   </div>
 </form>
