--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -4,7 +4,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/products', 'add']"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="showDialog()"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
@@ -34,4 +34,8 @@
       </entities-table>
     </md-card-content>
   </md-card>
+</div>
+
+<div *ngIf="showAddDialog" class="full-overlay">
+  <product-add-new [mode]="modes.Add" [entity]="product" [price]="price" (saveEntity)="saveProduct()" (cancelUpdate)="hideDialog()"></product-add-new>
 </div>
