--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -142,3 +142,14 @@ $title-color: #8D8888;
   line-height: 180%;
   font-family: monospace;
 }
+
+.full-overlay {
+  position: fixed;
+  display: flex;
+  top: 70px;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.3);
+}
