--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -144,12 +144,13 @@ $title-color: #8D8888;
 }
 
 .full-overlay {
-  position: fixed;
+  position: absolute;
   display: flex;
-  top: 70px;
+  top: 0;
   left: 0;
   z-index: 1;
   width: 100%;
   height: 100%;
+  min-height: calc(100vh - 70px);
   background: rgba(0,0,0,0.3);
 }
